Python AI/ML based categorization of expenses